--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  
   "dependencies": {
+    "express": "^4.18.2",
     "pg": "^8.10.0"
   }
 }
